src/integration/snapshots/rustclean__integration__screens__browser-downloads-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo/Downloads  │  3.6 GiB (diskte)  │  4 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
    Boyut       Oran                Dosya      Son değişiklik   Ad
▶       3.0 GiB ██████████▏   %84.3            27.08.2025 12:00 Xcode_16.xip
      450.0 MiB █▌            %12.3            15.03.2026 12:00 setup.dmg
      120.0 MiB ▍              %3.3            19.09.2026 12:00 photos.zip
        3.0 MiB                %0.1            29.09.2026 12:00 report.pdf




















────────────────────────────────────────────────────────────────────────────────────────────────────
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ?  yardım   ↑↓  gez   Enter  gir   ⌫  geri   t  harita   /  ara   m  raporlar   i  özet   s  sırala
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 16+12 Cyan/- | 47+16 Yellow/-
 5: 16+12 Cyan/- | 47+16 Cyan/-
 6: 16+12 Cyan/- | 47+16 Green/-
28: 0+22 Gray/- | 22+24 Yellow/-
29: 0+3 Black/Gray | 12+4 Black/Gray | 22+7 Black/Gray | 35+3 Black/Gray | 45+3 Black/Gray | 57+3 Black/Gray | 66+3 Black/Gray | 80+3 Black/Gray | 90+3 Black/Gray
