src/integration/snapshots/rustclean__integration__screens__browser-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
    Boyut       Oran                Dosya      Son değişiklik   Ad
▶       3.6 GiB █████         %41.2          4 29.09.2026 12:00 Downloads/
        3.2 GiB ████▍         %36.7          2 21.09.2026 12:00 Movies/
        1.1 GiB █▌            %12.8          5 28.09.2026 12:00 Projects/
      665.0 MiB ▉              %7.5          2 30.09.2026 12:00 Library/
      150.0 MiB ▎              %1.7          1 21.09.2026 12:00 Applications/
        4.0 MiB                %0.0          3 30.09.2026 12:00 Documents/


















────────────────────────────────────────────────────────────────────────────────────────────────────
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ↑↓  gez   Enter  gir   ⌫  geri   t  harita   /  ara   m  raporlar   i  özet   s  sırala   a  görüne
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+16 -/DarkGray BOLD | 16+12 Cyan/DarkGray BOLD | 28+8 -/DarkGray BOLD | 36+10 Gray/DarkGray BOLD | 46+1 -/DarkGray BOLD | 47+16 Green/DarkGray BOLD | 63+1 -/DarkGray BOLD | 64+10 LightBlue/DarkGray BOLD | 74+26 -/DarkGray BOLD
 4: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+7 LightBlue/- BOLD
 5: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+9 LightBlue/- BOLD
 6: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+8 LightBlue/- BOLD
 7: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+13 LightBlue/- BOLD
 8: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+10 LightBlue/- BOLD
28: 0+22 Gray/- | 22+24 Yellow/-
29: 0+4 Black/Gray | 10+7 Black/Gray | 23+3 Black/Gray | 33+3 Black/Gray | 45+3 Black/Gray | 54+3 Black/Gray | 68+3 Black/Gray | 78+3 Black/Gray | 90+3 Black/Gray
