src/integration/snapshots/rustclean__integration__screens__confirm-en.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (on disk)  │  17 files  │  sort: size
──────────────────────────────────── Date: ██ ≤ 7 days   ██ ≤ 30 days   ██ ≤ 1 year   ██ > 1 year
    Size        Share               Files      Modified         Name
▶       3.6 GiB █████         41.2%          4 2026-09-29 12:00 Downloads/
        3.2 GiB ████▍         36.7%          2 2026-09-21 12:00 Movies/
        1.1 GiB █▌            12.8%          5 2026-09-28 12:00 Projects/
      665.0 MiB ▉              7.5%          2 2026-09-30 12:00 Library/
      150.0 MiB ▎              1.7%          1 2026-09-21 12:00 Applications/
        4.0 ┌ Move to the trash? ──────────────────────────────────────────────────────┐
            │                                                                          │
            │                                  2 items                                 │
            │                                                                          │
            │                      /Users/demo/Downloads/setup.dmg                     │
            │                   /Users/demo/Projects/web/node_modules                  │
            │                                                                          │
            │                           Total size: 760.0 MiB                          │
            │                              Files inside: 2                             │
            │                                                                          │
            │                        Will be moved to the trash.                       │
            │                                                                          │
            │                        y  yes, move      n  cancel                       │
            └──────────────────────────────────────────────────────────────────────────┘





────────────────────────────────────────────────────────────────────────────────────────────────────
37 items scanned, 1.2 s   ⚠ 2 items inaccessible
 ?  help   y  yes, move to trash   n / Esc  cancel
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 36+7 White/- BOLD | 43+2 Green/- | 45+12 White/- | 57+2 Cyan/- | 59+13 White/- | 72+2 Yellow/- | 74+12 White/- | 86+2 Red/- | 88+12 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+7 LightBlue/- BOLD
 5: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+9 LightBlue/- BOLD
 6: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+8 LightBlue/- BOLD
 7: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+13 LightBlue/- BOLD
 8: 12+76 Red/-
 9: 12+1 Red/- | 87+1 Red/-
10: 12+1 Red/- | 47+7 -/- BOLD | 87+1 Red/-
11: 12+1 Red/- | 87+1 Red/-
12: 12+1 Red/- | 35+31 Gray/- | 87+1 Red/-
13: 12+1 Red/- | 32+37 Gray/- | 87+1 Red/-
14: 12+1 Red/- | 87+1 Red/-
15: 12+1 Red/- | 87+1 Red/-
16: 12+1 Red/- | 87+1 Red/-
17: 12+1 Red/- | 87+1 Red/-
18: 12+1 Red/- | 37+27 Gray/- | 87+1 Red/-
19: 12+1 Red/- | 87+1 Red/-
20: 12+1 Red/- | 36+3 Black/Red BOLD | 54+3 Black/Gray | 87+1 Red/-
21: 12+76 Red/-
28: 0+23 Gray/- | 23+25 Yellow/-
29: 0+3 Black/Gray | 10+3 Black/Gray | 34+9 Black/Gray
