src/integration/snapshots/rustclean__integration__screens__confirm-tr.snap
---
source: src/integration/screens.rs
expression: screen
---
 rustClean  /Users/demo  │  8.6 GiB (diskte)  │  17 dosya  │  sıralama: boyut
─────────────────────────────────────── Tarih: ██ ≤ 7 gün   ██ ≤ 30 gün   ██ ≤ 1 yıl   ██ > 1 yıl
    Boyut       Oran                Dosya      Son değişiklik   Ad
▶       3.6 GiB █████         %41.2          4 29.09.2026 12:00 Downloads/
        3.2 GiB ████▍         %36.7          2 21.09.2026 12:00 Movies/
        1.1 GiB █▌            %12.8          5 28.09.2026 12:00 Projects/
      665.0 MiB ▉              %7.5          2 30.09.2026 12:00 Library/
      150.0 MiB ▎              %1.7          1 21.09.2026 12:00 Applications/
        4.0 ┌ Çöp kutusuna taşınsın mı? ───────────────────────────────────────────────┐
            │                                                                          │
            │                                   2 öğe                                  │
            │                                                                          │
            │                      /Users/demo/Downloads/setup.dmg                     │
            │                   /Users/demo/Projects/web/node_modules                  │
            │                                                                          │
            │                          Toplam boyut: 760.0 MiB                         │
            │                             İçerdiği dosya: 2                            │
            │                                                                          │
            │                          Çöp kutusuna taşınacak.                         │
            │                                                                          │
            │                        e  evet, taşı      h  vazgeç                      │
            └──────────────────────────────────────────────────────────────────────────┘





────────────────────────────────────────────────────────────────────────────────────────────────────
37 öğe tarandı, 1.2 sn   ⚠ 2 öğeye erişilemedi
 ?  yardım   e  evet, çöpe taşı   h / Esc  vazgeç
--- styles (column+width foreground/background modifiers) ---
 0: 0+11 Black/Cyan BOLD
 1: 39+8 White/- BOLD | 47+2 Green/- | 49+11 White/- | 60+2 Cyan/- | 62+12 White/- | 74+2 Yellow/- | 76+11 White/- | 87+2 Red/- | 89+11 White/-
 2: 0+100 -/- BOLD | UNDERLINED
 3: 0+100 White/Indexed(238) BOLD
 4: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+7 LightBlue/- BOLD
 5: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+9 LightBlue/- BOLD
 6: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Green/- | 64+8 LightBlue/- BOLD
 7: 16+12 Cyan/- | 36+10 Gray/- | 47+16 Cyan/- | 64+13 LightBlue/- BOLD
 8: 12+76 Red/-
 9: 12+1 Red/- | 87+1 Red/-
10: 12+1 Red/- | 48+5 -/- BOLD | 87+1 Red/-
11: 12+1 Red/- | 87+1 Red/-
12: 12+1 Red/- | 35+31 Gray/- | 87+1 Red/-
13: 12+1 Red/- | 32+37 Gray/- | 87+1 Red/-
14: 12+1 Red/- | 87+1 Red/-
15: 12+1 Red/- | 87+1 Red/-
16: 12+1 Red/- | 87+1 Red/-
17: 12+1 Red/- | 87+1 Red/-
18: 12+1 Red/- | 39+23 Gray/- | 87+1 Red/-
19: 12+1 Red/- | 87+1 Red/-
20: 12+1 Red/- | 36+3 Black/Red BOLD | 55+3 Black/Gray | 87+1 Red/-
21: 12+76 Red/-
28: 0+22 Gray/- | 22+24 Yellow/-
29: 0+3 Black/Gray | 12+3 Black/Gray | 33+9 Black/Gray
